fix code overflowing in blog on mobile

--- a/client/_variables.scss
+++ b/client/_variables.scss
@@ -1,5 +1,6 @@
 // colors
-$white: whitesmoke;
+$white: white;
+$offwhite: whitesmoke;
 $lightergray: #d5d5d5;
 $lightgray: #828282;
 $mediumgray: #525252;
